# TorchFundations

./: README.md  pyproject.toml
configs/: autoencoder.yml  reconstruction.yml
configs/tasks/: reconstruction.yml
data/: imagenet
hub/: hubconf.py
logs/tasks/reconstruction/: params.yaml
logs/tasks/reconstruction/example/checkpoints/: checkpoint.pt
scripts/: train.sbatch
src/torch-fundations/models/vision/: vit.py
src/torch_fundations/: meta.py
src/torch_fundations/models/vision/: unet.py  vit.py
src/torch_fundations/tasks/vision/: reconstruction.py
torch_fundations/: __init__.py  __main__.py  meta.py
torch_fundations/models/vision/: __init__.py  unet.py  vit.py
torch_fundations/tasks/vision/: __init__.py
torch_fundations/tasks/vision/autoencoder/: __init__.py  train.py  vit.py
torch_fundations/tasks/vision/pixel_reconstruction/: train.py  vit.py
