[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-fundations"
dynamic = ["version"]
description = 'A Fundation Pytorch Model Hub for Researchers.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Zegang Cheng", email = "zc2309@nyu.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'torch>=2.0.0',
  'torchvision',
  'torchdata',
]

[project.urls]
Documentation = "https://github.com/chengzegang/TorchFundations#readme"
Issues = "https://github.com/chengzegang/TorchFundations/issues"
Source = "https://github.com/chengzegang/TorchFundations"

[tool.hatch.version]
path = "torch_fundations/__about__.py"


[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
allow_redefinition = false
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "matplotlib.*",
    "torchdata.*"
]
ignore_missing_imports = true